--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,9 @@
 /* CONTRIBUTION GRAPH */
 
 .container {
-  @apply bg-white p-4 m-10 mx-auto border border-gray-300 rounded-xl grid grid-cols-12 gap-3 md:gap-4;
+  @apply bg-white p-4 m-10 mx-auto border border-gray-300 rounded-xl grid grid-cols-12 grid-rows-7 gap-3 md:gap-4;
   @apply max-w-sm md:max-w-lg lg:max-w-3xl 2xl:max-w-4xl;
+  grid-auto-flow: column;
 }
 
 .contribs {
@@ -14,7 +15,7 @@
   @apply md:h-8 md:w-8 md:rounded-lg;
 }
 
-/*  */
+/* // CONTRIBUTION GRAPH  */
 
 
 /* .container {
