--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,13 +6,11 @@ body {
 }
 
 
-
 /* START - Contribution Graph */
 
 :root {
   --square-size: 15px;
   --square-gap: 5px;
-  --week-width: calc(var(--square-size) + var(--square-gap));
 }
 
 .months {
@@ -29,64 +27,14 @@ body {
 
 .graph {
   display: inline-grid;
-  grid-template-areas: "empty months"
-    "days squares";
+  grid-template-areas: 'empty months' 'empty squares';
   grid-template-columns: auto 1fr;
-  grid-gap: 10px;
 }
 
-.months {
-  display: grid;
-  grid-template-columns: calc(var(--week-width) * 4)
-    /* Jan */
-    calc(var(--week-width) * 4)
-    /* Feb */
-    calc(var(--week-width) * 4)
-    /* Mar */
-    calc(var(--week-width) * 5)
-    /* Apr */
-    calc(var(--week-width) * 4)
-    /* May */
-    calc(var(--week-width) * 4)
-    /* Jun */
-    calc(var(--week-width) * 5)
-    /* Jul */
-    calc(var(--week-width) * 4)
-    /* Aug */
-    calc(var(--week-width) * 4)
-    /* Sep */
-    calc(var(--week-width) * 5)
-    /* Oct */
-    calc(var(--week-width) * 4)
-    /* Nov */
-    calc(var(--week-width) * 5)
-    /* Dec */
-  ;
-}
-
-.days,
-.squares {
-  display: grid;
-  grid-gap: var(--square-gap);
-  grid-template-rows: repeat(7, var(--square-size));
-}
-
-.squares {
-  grid-auto-flow: column;
-  grid-auto-columns: var(--square-size);
-}
-
-
-/* Other styling */
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 12px;
-}
-
+/* other styling */
 .graph {
   padding: 20px;
-  border: 1px #e1e4e8 solid;
+  border: 1px solid #e1e4e8;
   margin: 20px;
 }
 
@@ -95,19 +43,19 @@ body {
 }
 
 .squares li {
-  background-color: #ebedf0;
+  background-color: black;
 }
 
 .squares li[data-level="1"] {
-  background-color: #c6e48b;
+  background-color: black;
 }
 
 .squares li[data-level="2"] {
-  background-color: #7bc96f;
+  background-color: black;
 }
 
 .squares li[data-level="3"] {
-  background-color: #196127;
+  background-color: black;
 }
 
 /* END - Contribution Graph */
